added user/v545_reflash.c and v545_verify_flash() to lib/v545_utils/v545_utils.c

--- a/user/v545/Makefile
+++ b/user/v545/Makefile
@@ -17,7 +17,7 @@
 
 include ../header.mk
 
-ALL = v545_lvdt v545_synchro v545_resolver v545_real_synchro 
+ALL = v545_lvdt v545_synchro v545_resolver v545_real_synchro v545_reflash
 
 all: $(ALL)
 
