add support for v210 card -- additional modifications

--- a/v120_config/input.conf
+++ b/v120_config/input.conf
@@ -2,16 +2,17 @@
 # repeater v120[0] -a16 0xffff0000 -s16 32k -S16 SLOW -a24 0xff000000 -s24 1m -S24 MED -a32 0xe0000000 -s32 2M -S32 FAST
 repeater v120[0] -a16 0xffff0000 -s16 64k -a24 0xff000000 -s24 1m -a32 0xe0000000 -s32 2M 
 vmedevice v545[0][0] -base 0xffff0000 
-vmedevice v545[0][1] -base 0xffff1000
-vmedevice v545[0][2] -base 0xffff1800
+# vmedevice v545[0][1] -base 0xffff1000
+# vmedevice v545[0][2] -base 0xffff1800
 vmedevice v470[0][0] -base 0xffff0800 
 vmedevice v450[0][0] -base 0xffff0a00 
 vmedevice v375[0][0] -base 0xffff0c00
+vmedevice v210[0][0] -base 0xff000000
 
-repeater v120[1] -a16 0xffff8000 -s16 64k -S16 SLOW -a24 0xff100000 -s24 1m -S24 MED -a32 0xe0200000 -s32 2M -S32 FAST
-vmedevice v545[1][0] -base 0xffff0000 
-vmedevice v545[1][1] -base 0xffff1000
-vmedevice v545[1][2] -base 0xffff1800
-vmedevice v470[1][0] -base 0xffff0800 
-vmedevice v450[1][0] -base 0xffff0a00 
-vmedevice v375[1][0] -base 0xffff0c00
+# repeater v120[1] -a16 0xffff8000 -s16 64k -S16 SLOW -a24 0xff100000 -s24 1m -S24 MED -a32 0xe0200000 -s32 2M -S32 FAST
+# vmedevice v545[1][0] -base 0xffff0000 
+# vmedevice v545[1][1] -base 0xffff1000
+# vmedevice v545[1][2] -base 0xffff1800
+# vmedevice v470[1][0] -base 0xffff0800 
+# vmedevice v450[1][0] -base 0xffff0a00 
+# vmedevice v375[1][0] -base 0xffff0c00
