--- a/v120_config/auto_output.conf
+++ b/v120_config/auto_output.conf
@@ -1,6 +1,6 @@
-repeater v120[0] -a16 0xffff0000 -s16 0x8000 -S16 SLOW -sp16 260 -ep16 261 -a24 0xff000000 -s24 0x100000 -S24 MED -sp24 196 -ep24 259 -a32 0xe0000000 -s32 0x200000 -S32 FAST -sp32 68 -ep32 195 -o true
-repeater v120[1] -a16 0xffff8000 -s16 0x8000 -S16 SLOW -a24 0xff100000 -s24 0x100000 -S24 MED -a32 0xe0200000 -s32 0x200000 -S32 FAST -o false
+repeater v120[0] -a16 0xffff0000 -s16 0x10000 -S16 MAX -sp16 264 -ep16 267 -a24 0xff000000 -s24 0x100000 -S24 MAX -sp24 200 -ep24 263 -a32 0xe0000000 -s32 0x200000 -S32 MAX -sp32 72 -ep32 199 -o true
 vmedevice v545[0][0] -base 0xffff0000 -a 16 -o true	# VME Synchro/Resolver/LVDT/RVDT Simulation/Acquisition Module
 vmedevice v470[0][0] -base 0xffff0800 -a 16 -o true	# VME Analog Output and Thermocouple Simulator Module
-vmedevice v450[0][0] -base 0xffff0a00 -a 16 -o true	# VME Analog Input Module
-vmedevice v375[0][0] -base 0xffff0c00 -a 16 -o true	# VME Waveform Generator
+vmedevice v450[0][0] -base 0xffff0a00 -a 16 -o true	# VME Analog Input and Thermocouple Measurement Module
+vmedevice v375[0][0] -base 0xffff0c00 -a 16 -o true	# VME Arbitrary Waveform Generator
+vmedevice v210[0][0] -base 0xff000000 -a 24 -o true	# VME Relay Module
